@@ -26,6 +26,7 @@ import java.nio.ByteBuffer;
 import java.nio.ByteOrder;
 import java.nio.charset.CharsetEncoder;
 import java.nio.charset.CodingErrorAction;
+import java.nio.charset.StandardCharsets;
 import java.text.ParseException;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -60,7 +61,6 @@ import org.boon.json.JsonParserFactory;
 
 import com.geoxp.GeoXPLib;
 import com.geoxp.GeoXPLib.GeoXPShape;
-import com.google.common.base.Charsets;
 import com.google.common.collect.ImmutableMap;
 
 import io.warp10.CapacityExtractorOutputStream;
@@ -340,7 +340,10 @@ public class GTSHelper {
   }
   
   public static final GeoTimeSerie valueSort(GeoTimeSerie gts, boolean reversed) {
+    gts.sorted = false;
+
     quicksortByValue(gts, 0, gts.values - 1, reversed);
+
     return gts;
   }
 
@@ -808,7 +811,10 @@ public class GTSHelper {
   }
 
   public static GeoTimeSerie locationSort(GeoTimeSerie gts) {
+    gts.sorted = false;
+    
     quicksortByLocation(gts,0,gts.values - 1,false);
+
     return gts;
   }
 
@@ -1290,7 +1296,7 @@ public class GTSHelper {
     }
       
     if (value instanceof byte[]) {
-      value = new String((byte[]) value, Charsets.ISO_8859_1);
+      value = new String((byte[]) value, StandardCharsets.ISO_8859_1);
     }
     
     //
@@ -2120,7 +2126,7 @@ public class GTSHelper {
     
     if (name.contains("%")) {
       try {      
-        name = URLDecoder.decode(name, "UTF-8");
+        name = URLDecoder.decode(name, StandardCharsets.UTF_8.name());
       } catch (UnsupportedEncodingException uee) {
         // Can't happen, we're using UTF-8
       }      
@@ -2425,7 +2431,7 @@ public class GTSHelper {
       //if (name.contains("%")) {
       if (-1 != UnsafeString.indexOf(name, '%')) {
         try {      
-          name = URLDecoder.decode(name, "UTF-8");
+          name = URLDecoder.decode(name, StandardCharsets.UTF_8.name());
         } catch (UnsupportedEncodingException uee) {
           // Can't happen, we're using UTF-8
         }      
@@ -2566,7 +2572,7 @@ public class GTSHelper {
         value = valuestr.substring(1, valuestr.length() - 1);
         if (((String)value).contains("%")) {
           try {
-            value = URLDecoder.decode((String) value, "UTF-8");
+            value = URLDecoder.decode((String) value, StandardCharsets.UTF_8.name());
           } catch (UnsupportedEncodingException uee) {
             // Can't happen, we're using UTF-8
           }
@@ -3002,7 +3008,7 @@ public class GTSHelper {
   }
   
   public static final long classId(long k0, long k1, String name) {
-    CharsetEncoder ce = Charsets.UTF_8.newEncoder();
+    CharsetEncoder ce = StandardCharsets.UTF_8.newEncoder();
 
     ce.onMalformedInput(CodingErrorAction.REPLACE)
     .onUnmappableCharacter(CodingErrorAction.REPLACE)
@@ -3101,7 +3107,7 @@ public class GTSHelper {
     // Implementation is a sun.nio.cs.UTF_8$Encoder which implements ArrayEncoder
     //
     
-    CharsetEncoder ce = Charsets.UTF_8.newEncoder();
+    CharsetEncoder ce = StandardCharsets.UTF_8.newEncoder();
     
     //
     // Allocate arrays large enough for most cases
@@ -3224,8 +3230,8 @@ public class GTSHelper {
     long[] sipkey = SipHashInline.getKey(key);
     
     for (Entry<String, String> entry: labels.entrySet()) {
-      hashes[idx] = SipHashInline.hash24_palindromic(sipkey[0], sipkey[1], entry.getKey().getBytes(Charsets.UTF_8));
-      hashes[idx+1] = SipHashInline.hash24_palindromic(sipkey[0], sipkey[1], entry.getValue().getBytes(Charsets.UTF_8));
+      hashes[idx] = SipHashInline.hash24_palindromic(sipkey[0], sipkey[1], entry.getKey().getBytes(StandardCharsets.UTF_8));
+      hashes[idx+1] = SipHashInline.hash24_palindromic(sipkey[0], sipkey[1], entry.getValue().getBytes(StandardCharsets.UTF_8));
       idx+=2;
     }
     
@@ -3466,11 +3472,11 @@ public class GTSHelper {
       
       try {
         if (name.contains("%")) {
-          name = URLDecoder.decode(name, "UTF-8");
+          name = URLDecoder.decode(name, StandardCharsets.UTF_8.name());
         }
         
         if (value.contains("%")) {
-          value = URLDecoder.decode(value, "UTF-8");
+          value = URLDecoder.decode(value, StandardCharsets.UTF_8.name());
         }        
       } catch (UnsupportedEncodingException uee) {
         // Can't happen, we're using UTF-8 which is a standard JVM encoding.
@@ -3501,7 +3507,7 @@ public class GTSHelper {
     
     if (classSelector.contains("%")) {
       try {      
-        classSelector = URLDecoder.decode(classSelector, "UTF-8");
+        classSelector = URLDecoder.decode(classSelector, StandardCharsets.UTF_8.name());
       } catch (UnsupportedEncodingException uee) {
         // Can't happen, we're using UTF-8
       }      
@@ -3613,7 +3619,7 @@ public class GTSHelper {
     } else if (value instanceof String) {
       sb.append("'");
       try {
-        String encoded = WarpURLEncoder.encode((String) value, "UTF-8");
+        String encoded = WarpURLEncoder.encode((String) value, StandardCharsets.UTF_8);
         sb.append(encoded);
       } catch (UnsupportedEncodingException uee) {
         // Won't happen
@@ -3630,7 +3636,7 @@ public class GTSHelper {
       return;
     }
     try {
-      String encoded = WarpURLEncoder.encode(name, "UTF-8");
+      String encoded = WarpURLEncoder.encode(name, StandardCharsets.UTF_8);
       sb.append(encoded);
     } catch (UnsupportedEncodingException uee) {      
     }
@@ -7637,7 +7643,7 @@ public class GTSHelper {
       // Generate bSAX words
       //
       
-      String word = new String(OrderPreservingBase64.encode(SAXUtils.bSAX(levels, symbols)), Charsets.US_ASCII);
+      String word = new String(OrderPreservingBase64.encode(SAXUtils.bSAX(levels, symbols)), StandardCharsets.US_ASCII);
       
       GTSHelper.setValue(saxGTS, gts.ticks[i], word);      
     }
